web/style/style.css
body, html {
    height: 100%;
    width: 100%;
    overflow: hidden;
}
/* Navbar */
.logo {
    background-image: url('../images/Logo.png');
    background-size: 126px 100px;
    background-repeat: no-repeat;
    width: 126px;
    height: 100px;
}

.navbar {
    margin-bottom: initial;
}

#logos {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 5px;
}

.logo2 {
    text-align: right;
    max-width: 15ch;
    padding: 1px;
    color: darkslategrey;
}

.navbar-default ul.nav li > a {
    padding: 15px;
}

.navbar-default ul.nav li > .icon {
    margin: 15px;
}

.navbar-collapse.collapse.in {
    overflow-x: hidden;
}

.navbar-collapse.collapse.in li {
    float:right;
}

ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
    color: transparent;
}

.icon {
    background-size: 20px 20px;
    background-repeat: no-repeat;
    height: 20px;
    width: 20px;
}

#output .icon {
    background-image:  url('../images/Geef info.png');
}

#insert-link .icon {
    background-image:  url('../images/Insert.png');
}

#info-link .icon {
    background-image:  url('../images/info.png');
}

#polygon-link .icon {
    background-image:  url('../images/polygon.png');
}

#draw-link .icon {
    background-image:  url('../images/draw.png');
}

#depth-link .icon {
    background-image:  url('../images/Depth.png');
}

#measure-link .icon {
    background-image:  url('../images/tool.png');
}

#share-link .icon {
    background-image:  url('../images/social.png');
}

#download-link .icon {
    background-image:  url('../images/download.png');
}

#question-link .icon {
    background-image:  url('../images/question.png');
}

#fullscreen-link .icon {
    background-image:  url('../images/fullscreen.png');
}

#search-link .icon {
    background-image:  url('../images/search2.png');
}

#depthpoint-link .icon {
    background-image:  url('../images/Depth_point.png');
}

#legende_knop .icon {
    background-image:  url('../images/Legend.png');
}

/* Map */
#map-container {
    position: relative;
    height: 100%;
}

#map {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

/* Layer menu */
.layers, .layers a {
    color: transparent;
}

.layers, .layers a {
    color: white;
}

.layertitle {
    padding-top: 40px;
    padding-left: 20px;
    color: rgb(75, 113, 151);
    font-size: 12pt;
}

.layer, .layer_active, .categorytitle {
    width:200px;
    text-decoration:none;
    color:white;
    display:block;
    font-size: 10pt;
    padding-top: 7px;
    padding-bottom:7px;
    cursor:pointer;
    padding-left: 30px;
}

.category .toggle-layer {
    padding-left: 45px;
}

.layer_active {
    border-right: 10px solid #DE6800;
    width: 190px;
}

.layer:hover {
    background-color:#373C5A;
}

.layer_active:hover {
    background-color:#FFAD65;
}

.layers {
    display: block;
    width: 33px;
    top: 5px;
    border-radius: 2px;
    background-image: url('../images/index.png');
    height: 33px;
    overflow: hidden;
    z-index: 1;
    position: relative;
    float: right;
}

.layers:hover {
    background-image: none;
    background-color: rgb(37, 42, 58);
    max-height: 70vh;
    top: initial;
    left: initial;
}

.layers:hover, .legende {
    width: 240px;
    height: auto;
    overflow-y: auto;
    z-index: 1;
    position: relative;

}

/* Legende */
.layers:hover + .legende, .display-none {
    display: none;
}

.legende {
    max-height: 65vh;
    background-color: white;
    padding-left: 10px;
    padding-top: 10px;
    padding-bottom:10px;
    border-right: 1px solid #ddd;
    border-radius:2px;
    left: 30px;
    top: 5px;
}

.legende_content {
    padding-top:0;
    padding-right:10px;
}

.legende_item {
    padding-top: 5px;
    border-bottom: 1px solid #bbb;
    padding-bottom: 5px;
    line-height: 35px;
}

/*D3 chart */
.form_control{
    color: grey;
}

.colored circle {
    fill:red;
}

/* Grafiek lijn */
#depthsvg path {
    stroke: orange;
    stroke-width: 1;
    fill: none;
    transform: scale(2,2);
}

#depthsvg line {
    stroke: black;
    transform: scale(2,2);
    stroke-width: 0.5;
}

#depthsvg text {
    font-family: Arial, serif;
    font-size: 9pt;
}

.area {
    /*stroke-width: 0.5;*/
    fill: lightsteelblue;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none;   /* Chrome/Safari/Opera */
    -moz-user-select: none;      /* Firefox */
    -ms-user-select: none;       /* IE/Edge */
    user-select: none;           /* non-prefixed version, currently
                                  not supported by any browser */
}

/* Info */
#close-info {
    position: absolute;
    height: 20px;
    width: 20px;
    background-image: url('../images/Close_white.png');
    background-size: 15px 15px;
    background-repeat: no-repeat;
    top: 0;
    right: 0;
}

#info {
    width:230px;
    background-color: rgb(37, 42, 58);
    float: right;
    position: relative;
    right: 0;
    z-index: 1000;
    height: 100%;
    display:none;
    color: white;
    overflow: auto;
    top: 0;
}

.infotitle {
    padding-top: 10px;
    padding-left: 10px;
    color: rgb(75, 113, 151);
    font-size: 12pt;
    font-weight:bold;
}

.infoobject{
    margin-left:15px;
    margin-right:5px;
    border-left: 2px solid #DE6800;
    margin-top:10px;
    margin-bottom:10px;
    padding:3px;
}

.infoname {
    font-weight:bold;
    background-color:#373C5A;
    font-size: 9pt;
    padding-top:2px;
    padding-bottom:2px;
}

.infopar {
    font-size: 8pt;
    padding-top:2px;
    padding-bottom:2px;
}

.infopar a {
    color:	#DE6800;
    text-decoration:none;
}

.infopar a:hover {
    text-decoration:none;
}

#depth-profile {
    height: 80vh;
    width: 80vw;
    margin: 10vh 10vw;
    top: 0;
    color: cornflowerblue;
    z-index: 5;
    position: fixed;
    background: #e9e9e9;
    text-align: center;
    border: 1px solid #999;
}

#depthsvg {
    display: inline-block;
    height: 85%;
    width: 100%;
}

#button_close {
    float: right;
    height: 20px;
    width: 20px;
    background-image: url('../images/button_close.png');
    background-size: 15px 15px;
    background-repeat: no-repeat;
}

/* Spinner */
.glyphicon.spinner {
    animation: spin 1s infinite linear;
    -webkit-animation: spin2 1s infinite linear;
}

@keyframes spin {
    from { transform: scale(1) rotate(0deg); }
    to { transform: scale(1) rotate(360deg); }
}

@-webkit-keyframes spin2 {
    from { -webkit-transform: rotate(0deg); }
    to { -webkit-transform: rotate(360deg); }
}

.first-extent {
    top: 125px;
}

.second-extent {
    top: 150px;
}

.third-extent {
    top: 175px;
}

.fourth-extent {
    top: 200px;
}

.fifth-extent {
    top: 225px;
}

#reference-container, #layer-info-container {
    width: 100%;
    display: flex;
    justify-content: center;
}

#layer-info-content, #reference-content {
    color: white;
    background-color: blue;
    cursor: pointer;
}

#reference-container {
    position: fixed;
    bottom: 0;
}

#reference-content {
    border-top-right-radius: 15px;
    border-top-left-radius: 15px;
    padding: 10px 15px 5px 15px;
}

#layer-info-container {
    position: absolute;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: center;
}

#layer-info-content {
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
    padding: 5px 15px 10px 15px;
}


.selected-drawer {
    background-color: grey;
}

#timeline {
    position: absolute;
    bottom: 130px;
    left: 100px;
    font: 10px sans-serif;
}

.axis path,
.axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.brush .extent {
    stroke: #fff;
    fill-opacity: .125;
    shape-rendering: crispEdges;
}

@media screen and (min-width: 991px) {
    #info, #leg, .layers {
        display: block;
    }

    .layers {
        background-image: none;
        background-color: rgb(37, 42, 58);
        max-height: 70vh;
        top: initial;
        left: initial;
    }

    .layers, .legende {
        width: 240px;
        height: auto;
        overflow-y: auto;
        z-index: 1;
        position: relative;

    }

    /* Legende */
    .layers + .legende {
        display: none;
    }
}

#timeline .timeperiods {
    opacity: .4;
}

.nieuwste-tijd {
    fill: red;
    color: red;
}

.nieuwe-tijd {
    fill: orange;
    color: orange;
}

.middeleeuwen {
    fill: green;
    color: green;
}

.romeinse-tijd {
    fill: purple;
    color: purple;
}

.ijzertijd {
    fill: blue;
    color: blue;
}

.bronstijd {
    fill: yellow;
    color: yellow;
}

.einde-neolithicum {
    fill: darkolivegreen;
    color: darkolivegreen;
}

.begin-neolithicum {
    fill: cyan;
    color: cyan;
}

.paleolithicum {
    fill: black;
    color: black;
}

#timeline-legende {
    position: relative;
    width: 240px;
    left: 30px;
    z-index: 1;
    top: 20px;
    background-color: white;
}

